@@ -8,24 +8,21 @@ module Wice
       def render_filter_internal(params) #:nodoc:
         @contains_a_text_input = true
 
-        @query, _, parameter_name, @dom_id = form_parameter_name_id_and_query(:fr => '')
-        @query2, _, parameter_name2, @dom_id2 = form_parameter_name_id_and_query(:to => '')
+        @query, _, parameter_name, @dom_id = form_parameter_name_id_and_query(:eq => '')
 
-        opts1 = {:size => 3, :id => @dom_id,  :class => 'range-start'}
-        opts2 = {:size => 3, :id => @dom_id2, :class => 'range-end'}
+        opts = {:size => 3, :id => @dom_id,  :class => 'range-start'}
 
         if auto_reload
-          opts1[:class] += ' auto-reload'
-          opts2[:class] += ' auto-reload'
+          opts[:class] += ' auto-reload'
         end
 
-        text_field_tag(parameter_name,  params[:fr], opts1) + text_field_tag(parameter_name2, params[:to], opts2)
+        text_field_tag(parameter_name,  params[:eq], opts)
       end
 
       def yield_declaration_of_column_filter #:nodoc:
         {
-          :templates => [@query, @query2],
-          :ids       => [@dom_id, @dom_id2]
+          :templates => [@query],
+          :ids       => [@dom_id]
         }
       end
 
@@ -43,21 +40,12 @@ module Wice
           return false
         end
         conditions = [[]]
-        if opts[:fr]
-          if opts[:fr] =~ /\d/
-            conditions[0] << " #{@column_wrapper.alias_or_table_name(table_alias)}.#{@column_wrapper.name} >= ? "
-            conditions << opts[:fr]
+        if opts[:eq]
+          if opts[:eq] =~ /\d/
+            conditions[0] << " #{@column_wrapper.alias_or_table_name(table_alias)}.#{@column_wrapper.name} = ? "
+            conditions << opts[:eq]
           else
-            opts.delete(:fr)
-          end
-        end
-
-        if opts[:to]
-          if opts[:to] =~ /\d/
-            conditions[0] << " #{@column_wrapper.alias_or_table_name(table_alias)}.#{@column_wrapper.name} <= ? "
-            conditions << opts[:to]
-          else
-            opts.delete(:to)
+            opts.delete(:eq)
           end
         end
 
@@ -70,5 +58,6 @@ module Wice
         conditions
       end
     end
+
   end
 end
